Go through ThirdpersonCharacter to set projectiledamage

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -245,8 +245,8 @@ DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 K2Node_InputAction="\"Object\" "
@@ -526,18 +526,18 @@ BP_EnemyHealthComponent_C="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1732,20 +1732,20 @@ MRUItem0=/Game/ThirdPerson/Maps/LVL_00
 MRUItem1=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/AI/BP_EnemyHealthComponent
-MRUItem1=/Game/ThirdPerson/Blueprints/AI/BP_ConeEnemy
-MRUItem2=/Game/ThirdPerson/Blueprints/Abilities/BP_PlayerWaterball
+MRUItem0=/Game/ThirdPerson/Blueprints/Abilities/BP_PlayerWaterball
+MRUItem1=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
+MRUItem2=/Game/ThirdPerson/Blueprints/AI/WavePoolData
 MRUItem3=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractProjectileDamageIncrease
-MRUItem4=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractIncreaseProjectilePickUp
-MRUItem5=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
-MRUItem6=/Game/ThirdPerson/Blueprints/AI/WavePoolData
-MRUItem7=/Game/ThirdPerson/Blueprints/AI/BP_AIPlayerTurret
-MRUItem8=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractTurretSpawn
-MRUItem9=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenRegenandSpeed
-MRUItem10=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenHealthandOtto
-MRUItem11=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGoldPearlandShieldPickUpUse
-MRUItem12=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGrappleMaxandBulletAmount
-MRUItem13=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenRegenandSpeed
+MRUItem5=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenHealthandOtto
+MRUItem6=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGoldPearlandShieldPickUpUse
+MRUItem7=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenGrappleMaxandBulletAmount
+MRUItem8=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem9=/Game/ThirdPerson/Blueprints/AI/BP_EnemyHealthComponent
+MRUItem10=/Game/ThirdPerson/Blueprints/AI/BP_ConeEnemy
+MRUItem11=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractIncreaseProjectilePickUp
+MRUItem12=/Game/ThirdPerson/Blueprints/AI/BP_AIPlayerTurret
+MRUItem13=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractTurretSpawn
 MRUItem14=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractFiringRatePickUp
 MRUItem15=/Game/ThirdPerson/WBP/GameUI/WBP_UpgradeScreenFireRateandTurretHelper
 MRUItem16=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_EelPickUp
@@ -3934,8 +3934,8 @@ CapsuleComponent=
 WaterPhysics_GenericWaterBody=WaterBodyOcean.Collision.Collision
 SceneComponent=
 WaterZone=WaterBodyOcean.Collision.Collision
-BP_ThirdPersonCharacter_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
-SkeletalMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,CapsuleComponent.Collision.Collision
+BP_ThirdPersonCharacter_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,CapsuleComponent.Collision.Collision
+SkeletalMeshComponent=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 K2Node_CustomEvent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,WaterBodyOcean.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 Landscape=WaterBodyOcean.Collision.Collision
@@ -3944,10 +3944,10 @@ BP_ConeEnemy_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Coll
 NavMeshBoundsVolume=WaterBodyOcean.Collision.Collision
 BrushComponent=WaterBodyOcean.Collision.Collision
 BP_InteractMaxHealthPickUp_C=WaterBodyOcean.Collision.Collision
-K2Node_VariableGet=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,CapsuleComponent.Collision.Collision
+K2Node_VariableGet=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,CapsuleComponent.Collision.Collision
 BP_HealthComponent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,CapsuleComponent.Collision.Collision
-K2Node_VariableSet=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
-PropertyWrapper=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
+K2Node_VariableSet=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
+PropertyWrapper=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 K2Node=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 MulticastInlineDelegatePropertyWrapper=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,CapsuleComponent.Collision.Collision
 HealthComponent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,CapsuleComponent.Collision.Collision
