Created the algae for map barrier

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SoStylized/Environment/Rocks/Spire
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Niagara
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -575,6 +575,7 @@ Texture="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
@@ -604,9 +605,9 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/SoStylized/Effects/NS_FastWindLines.NS_FastWindLines
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Niagara/NS_GlowingAlgae.NS_GlowingAlgae
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1781,36 +1782,36 @@ MRUItem3=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem4=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem1=/Game/SoStylized/Effects/NS_FastWindLines
-MRUItem2=/Game/ThirdPerson/Blueprints/AI/BP_SlowConeEnemy
-MRUItem3=/Game/GrappleHookSystem/BP_GrapplehookTarget
-MRUItem4=/Game/GrappleHookSystem/WBP_GrapplehookTarget
-MRUItem5=/Game/GrappleHookSystem/T_GrappleTarget
-MRUItem6=/Game/ThirdPerson/Maps/LVL_00
-MRUItem7=/Game/ThirdPerson/Maps/LVL_01
-MRUItem8=/Game/SoStylized/Environment/Water/NS_WaterSplash
-MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem11=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem12=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem13=/Game/SoStylized/Environment/Water/BP_Water
-MRUItem14=/Game/SoStylized/Effects/NS_WindLines
-MRUItem15=/Game/SoStylized/Effects/NS_WaterSplash
-MRUItem16=/Game/SoStylized/Effects/Emitters/NE_WaterSplashMist
-MRUItem17=/Game/SoStylized/Effects/Emitters/NE_WaterSplashParticles
-MRUItem18=/Game/SoStylized/Maps/CompleteVol2/Demonstration
-MRUItem19=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
-MRUItem20=/Game/SoStylized/Demo/BP_StylizedSky_LiteNoPP
-MRUItem21=/Game/SoStylized/Demo/BP_StylizedSky_Lite
-MRUItem22=/Game/SoStylized/Environment/Water/Materials/M_UnderwaterPP
-MRUItem23=/Game/SoStylized/Maps/CompleteVol2/Overview
-MRUItem24=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenHealthandOtto
-MRUItem25=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenRegenandSpeed
-MRUItem26=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGoldPearlandShieldPickUpUse
-MRUItem27=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenFireRateandTurretHelper
-MRUItem28=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGrappleMaxandBulletDamage
-MRUItem29=/Game/ThirdPerson/Blueprints/AI/Tasks/BTT_MoveToDecoy
+MRUItem0=/Game/ThirdPerson/Niagara/NS_GlowingAlgae
+MRUItem1=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem2=/Game/SoStylized/Effects/NS_FastWindLines
+MRUItem3=/Game/ThirdPerson/Blueprints/AI/BP_SlowConeEnemy
+MRUItem4=/Game/GrappleHookSystem/BP_GrapplehookTarget
+MRUItem5=/Game/GrappleHookSystem/WBP_GrapplehookTarget
+MRUItem6=/Game/GrappleHookSystem/T_GrappleTarget
+MRUItem7=/Game/ThirdPerson/Maps/LVL_00
+MRUItem8=/Game/ThirdPerson/Maps/LVL_01
+MRUItem9=/Game/SoStylized/Environment/Water/NS_WaterSplash
+MRUItem10=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem11=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem12=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem13=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem14=/Game/SoStylized/Environment/Water/BP_Water
+MRUItem15=/Game/SoStylized/Effects/NS_WindLines
+MRUItem16=/Game/SoStylized/Effects/NS_WaterSplash
+MRUItem17=/Game/SoStylized/Effects/Emitters/NE_WaterSplashMist
+MRUItem18=/Game/SoStylized/Effects/Emitters/NE_WaterSplashParticles
+MRUItem19=/Game/SoStylized/Maps/CompleteVol2/Demonstration
+MRUItem20=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
+MRUItem21=/Game/SoStylized/Demo/BP_StylizedSky_LiteNoPP
+MRUItem22=/Game/SoStylized/Demo/BP_StylizedSky_Lite
+MRUItem23=/Game/SoStylized/Environment/Water/Materials/M_UnderwaterPP
+MRUItem24=/Game/SoStylized/Maps/CompleteVol2/Overview
+MRUItem25=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenHealthandOtto
+MRUItem26=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenRegenandSpeed
+MRUItem27=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGoldPearlandShieldPickUpUse
+MRUItem28=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenFireRateandTurretHelper
+MRUItem29=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGrappleMaxandBulletDamage
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -4480,6 +4481,7 @@ Actor.Surface Properties=True
 /Game/GrappleHookSystem/T_GrappleTarget.T_GrappleTarget=1
 /Game/GrappleHookSystem/WBP_GrapplehookTarget.WBP_GrapplehookTarget=0
 /Game/GrappleHookSystem/BP_GrapplehookTarget.BP_GrapplehookTarget=0
+/Game/ThirdPerson/Niagara/NS_GlowingAlgae.NS_GlowingAlgae=0
 
 [PluginBrowser]
 InstalledPlugins=WaterPhysics
