Remove print string in game for demo build

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,7 @@ r.AntiAliasingMethod=2
 fx.GPUSimulationTextureSizeX=2048
 fx.GPUSimulationTextureSizeY=2048
 r.VT.TileSize=128
+r.TextureStreaming=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
