Set up win screen for controller support

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -588,44 +588,46 @@ WBP_OptionsMenu_C="\"Object\" "
 WBP_PauseMenu_C="\"Object\" "
 WBP_AUpgradeScreenParent_C="\"Object\" "
 WBP_UpgradeScreenGrappleMaxandBulletDamage_C="\"Object\" "
+WBP_WinScreen_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=EnumEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/InGameScreen.InGameScreen
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/LVL_00.LVL_00:PersistentLevel.LVL_00
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount.WBP_PearlAmount
+OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_WinScreen.WBP_WinScreen
+OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu.WBP_PauseMenu
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -660,8 +662,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=414.400 Y=262.400
-WindowSize=X=705.600 Y=297.600
+ScreenPosition=X=2789.000 Y=173.000
+WindowSize=X=706.000 Y=298.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -1805,36 +1807,36 @@ MRUItem7=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount
-MRUItem1=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_TriggerBoxWest
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_TriggerBoxSouth
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_TriggerBoxNorth
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_TriggerBoxEast
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_DetectDirection_North
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_DetectDirection_East
-MRUItem8=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenRegenandSpeed
-MRUItem9=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenHealthandOtto
-MRUItem10=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGrappleMaxandBulletDamage
-MRUItem11=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGoldPearlandShieldPickUpUse
-MRUItem12=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
-MRUItem13=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenFireRateandTurretHelper
-MRUItem14=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuBar
-MRUItem15=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuScreen
-MRUItem16=/Game/ThirdPerson/WBP/GameUI/InGameHUD
-MRUItem17=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuHUD
-MRUItem18=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem19=/Game/ThirdPerson/Input/Actions/IA_Attack1
-MRUItem20=/Game/ThirdPerson/Input/Actions/IA_Attack2
-MRUItem21=/Game/ThirdPerson/Input/IMC_Default
-MRUItem22=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
-MRUItem23=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem24=/Game/ThirdPerson/WBP/MainMenuUI/WBP_OptionsMenu
-MRUItem25=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_AUpgradeScreenParent
-MRUItem26=/Game/ThirdPerson/WBP/GameUI/WBP_InGameOptionsMenu
-MRUItem27=/Game/ThirdPerson/WBP/MainMenuUI/BP_MainMenuGameMode
-MRUItem28=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
-MRUItem29=/Game/ThirdPerson/WBP/MainMenuUI/EN_MainMenuButtons
+MRUItem0=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
+MRUItem1=/Game/ThirdPerson/WBP/GameUI/WBP_WinScreen
+MRUItem2=/Game/ThirdPerson/WBP/GameUI/WBP_PearlAmount
+MRUItem3=/Game/ThirdPerson/Maps/LVL_00
+MRUItem4=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem5=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_TriggerBoxWest
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_TriggerBoxSouth
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_TriggerBoxNorth
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_TriggerBoxEast
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_DetectDirection_North
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_DetectDirection_East
+MRUItem12=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenRegenandSpeed
+MRUItem13=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenHealthandOtto
+MRUItem14=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGrappleMaxandBulletDamage
+MRUItem15=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenGoldPearlandShieldPickUpUse
+MRUItem16=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenFireRateandTurretHelper
+MRUItem17=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuBar
+MRUItem18=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuScreen
+MRUItem19=/Game/ThirdPerson/WBP/GameUI/InGameHUD
+MRUItem20=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuHUD
+MRUItem21=/Game/ThirdPerson/Input/Actions/IA_Attack1
+MRUItem22=/Game/ThirdPerson/Input/Actions/IA_Attack2
+MRUItem23=/Game/ThirdPerson/Input/IMC_Default
+MRUItem24=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
+MRUItem25=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem26=/Game/ThirdPerson/WBP/MainMenuUI/WBP_OptionsMenu
+MRUItem27=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_AUpgradeScreenParent
+MRUItem28=/Game/ThirdPerson/WBP/GameUI/WBP_InGameOptionsMenu
+MRUItem29=/Game/ThirdPerson/WBP/MainMenuUI/BP_MainMenuGameMode
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -2113,6 +2115,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -5631,7 +5634,6 @@ WBP_UpgradeScreenGrappleMaxandBulletDamage_C.Localization=True
 WBP_UpgradeScreenGrappleMaxandBulletDamage_C.Accessibility=True
 WBP_UpgradeScreenGrappleMaxandBulletDamage_C.Rendering=True
 WBP_UpgradeScreenGrappleMaxandBulletDamage_C.Navigation=True
-UMGEditorProjectSettings.Designer =True
 BP_TriggerBoxSouth_C.Tick=True
 BP_TriggerBoxSouth_C.Replication=True
 BP_TriggerBoxSouth_C.Rendering=True
@@ -5642,6 +5644,19 @@ BP_TriggerBoxSouth_C.HLOD=True
 BP_TriggerBoxSouth_C.Physics=True
 BP_TriggerBoxSouth_C.WorldPartition=True
 BP_TriggerBoxSouth_C.Events=True
+UMGEditorProjectSettings.Designer =True
+WBP_WinScreen_C.Appearance=True
+WBP_WinScreen_C.Input=True
+WBP_WinScreen_C.Interaction=True
+WBP_WinScreen_C.Designer=True
+WBP_WinScreen_C.Performance=True
+WBP_WinScreen_C.Layout=True
+WBP_WinScreen_C.Behavior=True
+WBP_WinScreen_C.Render Transform=True
+WBP_WinScreen_C.Localization=True
+WBP_WinScreen_C.Accessibility=True
+WBP_WinScreen_C.Rendering=True
+WBP_WinScreen_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
@@ -5809,6 +5824,7 @@ BP_TriggerBoxSouth_C.Events=True
 /Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu.WBP_PauseMenu=0
 /Game/ThirdPerson/Input/Actions/IA_Attack2.IA_Attack2=1
 /Game/ThirdPerson/Blueprints/BP_TriggerBoxSouth.BP_TriggerBoxSouth=0
+/Game/ThirdPerson/WBP/GameUI/WBP_WinScreen.WBP_WinScreen=0
 
 [PluginBrowser]
 InstalledPlugins=WaterPhysics
@@ -6092,6 +6108,7 @@ WBP_AUpgradeScreenParent_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonChar
 WBP_UpgradeScreenGoldPearlandShieldPickUpUse_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.EnemyPool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision
 WBP_UpgradeScreenGrappleMaxandBulletDamage_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.EnemyPool,PostProcessComponent.PostProcessVolume.Lens,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
 WBP_UpgradeScreenHealthandOtto_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.EnemyPool,PostProcessComponent.PostProcessVolume.Lens,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,CapsuleComponent.Collision.Collision
+WBP_WinScreen_C=WaterBodyOcean.Collision.Collision,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.EnemyPool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
