--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,11 +83,9 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+ActionMappings=(ActionName="UseHealthPickUps",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="UseShieldPickUps",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
-+ActionMappings=(ActionName="UseHealthPickUps",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
-+AxisMappings=(AxisName="Attack1",Scale=1.000000,Key=LeftMouseButton)
-+AxisMappings=(AxisName="Attack1",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++ActionMappings=(ActionName="UseShieldPickUps",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
